<resources>
    <string name="app_name">P77S2120222DSE</string>
    <string name="Escuela">Tecnologico de Estudios Superiores Del Oriente Del Estado De Mexico</string>
    <string name="Alumno">Dominguez Sanchez Erick</string>
    <string name="grupo">7S21</string>
    <string name="envio">Envio</string>
    <string name="nativos">Nativo</string>
    <string name="objetos">Objeto</string>
    <string name="tesoem">tesoem</string>
    <string name="nativo">TextView</string>
    <string name="regresa">Regresar</string>
    <string name="vhint1">Escribe tu nombre</string>
    <string name="vhint2">Escribe tu edad</string>
    <string name="p2btn1">Enviar nativo</string>
    <string name="p2btn2">Enviar objeto</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
</resources>